# pyvegas-mtg-django

./: .gitignore  .uvignore  AGENTS.md  db.sqlite3  manage.py  pyproject.toml  readme.md  requirements.txt  setup.py  tool-compare.md  uv.sh
cards/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
cards/migrations/: 0001_initial.py  0002_alter_card_power_alter_card_toughness.py
cards/templates/cards/: card_create.html  index.html
cards/tests/: test_forms.py  test_models.py  test_views.py
data/: full_fixture.json
global_templates/: base.html
mtgcards/: asgi.py  pythonanywhere_settings.py  settings.py  settings_pythonanywhere.py  urls.py  wsgi.py
original-template/vinylrecordshopwebtemplate/: about.html  blog.html  contact.html  index.html  newrelease.html  topseller.html
original-template/vinylrecordshopwebtemplate/css/: style.css
static/css/: ie7.css  style.css
