[project]
name = "pyvegas-mtg-django"
version = "0.1.0"
description = "Magic the Gathering Django ORM demo application"
requires-python = ">=3.8"
dependencies = [
    "Django==4.0.5",
    "django-extensions==3.1.5",
]

[project.optional-dependencies]
dev = []

[project.scripts]
manage = "manage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cards", "mtgcards"]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
]
