[project]
name = "pyvegas-mtg-django"
version = "0.1.0"
description = "Magic the Gathering Django ORM demo application"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2,<6.0",
    "django-extensions>=4.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
manage = "manage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cards", "mtgcards"]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
]
